Add features on batch size file

--- a/batch_size/batch_size.ipynb
+++ b/batch_size/batch_size.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import copy"
+    "import copy\n",
+    "import pickle"
    ]
   },
   {
@@ -112,7 +113,7 @@
     "                break\n",
     "            loss_epoch = 0\n",
     "            for batch_idx, (data, target) in enumerate(train_loader):\n",
-    "                print(batch_idx)\n",
+    "                #print(batch_idx)\n",
     "                optimizer.zero_grad()\n",
     "\n",
     "                data = data.to(device)\n",
@@ -124864,7 +124865,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save the list to a file\n",
+    "with open('my_list.pkl', 'wb') as f:\n",
+    "    pickle.dump(my_list, f)\n",
+    "\n",
+    "# Load the list from the file\n",
+    "with open('my_list.pkl', 'rb') as f:\n",
+    "    my_list = pickle.load(f)"
+   ]
   }
  ],
  "metadata": {
